отрефакторены тесты всех методов доменных сущностей.