@@ -1,21 +1,13 @@
 package com.example.bulletin.unit.domain.entity.characteristic;
 
-import com.example.bulletin.application.mapper.CharacteristicMapper;
 import com.example.bulletin.domain.entity.Category;
 import com.example.bulletin.domain.entity.Characteristic;
 import com.example.bulletin.domain.entity.CharacteristicValue;
-import com.example.bulletin.domain.vo.CharacteristicData;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-@SpringBootTest
 public class CharacteristicUpdateTests {
-
-    @Autowired
-    private CharacteristicMapper mapper;
 
     @Test
     public void shouldRename() {
@@ -23,17 +15,12 @@ public class CharacteristicUpdateTests {
         Category category = Category.createRoot("Name 1");
         Characteristic characteristic = category.addCharacteristic("characteristic");
         String newName = "new name";
-        CharacteristicData expected = CharacteristicData.builder()
-                .name(newName)
-                .categoryId(category.getId())
-                .build();
 
         // Act
-        Characteristic renamedCharacteristic = characteristic.rename(newName);
-        CharacteristicData actual = mapper.toData(renamedCharacteristic);
+        characteristic.rename(newName);
 
         // Assert
-        assertEquals(expected.getName(), actual.getName());
+        assertEquals(newName, characteristic.getName());
     }
 
     @Test
@@ -49,7 +36,9 @@ public class CharacteristicUpdateTests {
         // Assert
         assertFalse(characteristic.getPossibleValues().isEmpty());
         assertEquals(valueName,
-                characteristic.getPossibleValues().get(0).getName());
+                characteristic.getPossibleValues()
+                        .getFirst()
+                        .getName());
     }
 
     @Test
@@ -60,13 +49,12 @@ public class CharacteristicUpdateTests {
         String valueName = "possible value 1";
         CharacteristicValue value = characteristic.addPossibleValue(valueName);
 
-
         // Act
         characteristic.removePossibleValue(value);
 
-
         // Assert
-        assertTrue(characteristic.getPossibleValues().isEmpty());
+        assertTrue(characteristic.getPossibleValues()
+                .isEmpty());
     }
 
     @Test
